web-speech sending result through event emitter

--- a/phrase-matcher/index.html
+++ b/phrase-matcher/index.html
@@ -19,9 +19,10 @@
 
     <button>Start new test</button>
 
+    <div id='main'></div>
+
     <div>
         <p class="phrase">Phrase...</p>
-        <p class="result">Right or wrong?</p>
         <p class="output">...diagnostic messages</p>
     </div>
 
