--- a/phrase-matcher/index.html
+++ b/phrase-matcher/index.html
@@ -26,6 +26,6 @@
         <p class="output">...diagnostic messages</p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
