working on adding react component

--- a/browser/index.html
+++ b/browser/index.html
@@ -14,18 +14,8 @@
   </head>
 
   <body>
-    <h1>Phrase matcher</h1>
-    <p>Press the button then say the phrase to test the recognition.</p>
-
-    <button>Start new test</button>
-
-    <div id='main'></div>
-
-    <div>
-        <p class="phrase">Phrase...</p>
-        <p class="output">...diagnostic messages</p>
+    <div id="main">
     </div>
-
-    <script src="bundle.js"></script>
+    <script async defer src="bundle.js"></script>
   </body>
 </html>
