--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <title>Phrase matcher</title>
+    <title>Title goes here</title>
 
     <link rel="stylesheet" href="style.css">
     <!--[if lt IE 9]>
